[gd_scene load_steps=35 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/SaveScreen/5 sin título_20220522143403.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Interfaces/PopUPS/opciones/pop_up_options_counter_change.gd" type="Script" id=2]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/27 sin título_20220612121448.png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/28 sin título_20220611171250.png" type="Texture" id=4]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Main Resources/Fuentes/game_over.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/29 sin título_20220611195223.png" type="Texture" id=7]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/30 sin título_20220612113849.png" type="Texture" id=8]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/31 sin título_20220612120442.png" type="Texture" id=9]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/31 sin título_20220612120427.png" type="Texture" id=10]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/31 sin título_20220612120436.png" type="Texture" id=11]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/31 sin título_20220612120439.png" type="Texture" id=12]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/31 sin título_20220612120433.png" type="Texture" id=13]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Opciones/27 sin título_20220612121846.png" type="Texture" id=14]

[sub_resource type="Animation" id=124]
resource_name = "prss"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.105112, 0.133972, 0.0669859 ),
"update": 0,
"values": [ Vector2( 76, 113 ), Vector2( 96, 143 ), Vector2( 76, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.105112, 0.133972, 0.0669859 ),
"update": 0,
"values": [ Vector2( 0, 243.5 ), Vector2( 0, 228.5 ), Vector2( 0, 243.5 ) ]
}

[sub_resource type="Animation" id=126]
resource_name = "prss"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.0883883, 0.138696, 0.0583146 ),
"update": 0,
"values": [ Vector2( 76, 113 ), Vector2( 96, 143 ), Vector2( 76, 113 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.0883883, 0.138696, 0.0583146 ),
"update": 0,
"values": [ Vector2( 948, 243.5 ), Vector2( 928, 228.5 ), Vector2( 948, 243.5 ) ]
}

[sub_resource type="DynamicFont" id=122]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=107]

[sub_resource type="StyleBoxTexture" id=108]

[sub_resource type="StyleBoxTexture" id=109]

[sub_resource type="StyleBoxTexture" id=110]

[sub_resource type="StyleBoxTexture" id=111]

[sub_resource type="StyleBoxTexture" id=112]

[sub_resource type="Theme" id=24]
HScrollBar/styles/grabber = SubResource( 107 )
HScrollBar/styles/grabber_highlight = SubResource( 107 )
HScrollBar/styles/grabber_pressed = SubResource( 107 )
HScrollBar/styles/scroll = SubResource( 107 )
HScrollBar/styles/scroll_focus = SubResource( 108 )
VScrollBar/styles/grabber = SubResource( 107 )
VScrollBar/styles/grabber_highlight = SubResource( 109 )
VScrollBar/styles/grabber_pressed = SubResource( 110 )
VScrollBar/styles/scroll = SubResource( 111 )
VScrollBar/styles/scroll_focus = SubResource( 112 )

[sub_resource type="DynamicFont" id=113]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=116]
size = 38
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=128]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "si",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "no",
"speed": 5.0
} ]

[sub_resource type="Animation" id=115]
resource_name = "prss"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 152 ), Vector2( 128, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.14 ),
"transitions": PoolRealArray( 1, 0.34151, 0.101532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24038, 1.24038 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=131]
resource_name = "prss"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 152 ), Vector2( 128, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.14 ),
"transitions": PoolRealArray( 1, 0.34151, 0.101532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24038, 1.24038 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=133]
resource_name = "prss"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 152 ), Vector2( 128, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.14 ),
"transitions": PoolRealArray( 1, 0.34151, 0.101532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24038, 1.24038 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=135]
resource_name = "prss"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 152 ), Vector2( 128, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.14 ),
"transitions": PoolRealArray( 1, 0.34151, 0.101532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24038, 1.24038 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=137]
resource_name = "prss"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 128, 152 ), Vector2( 128, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.14 ),
"transitions": PoolRealArray( 1, 0.34151, 0.101532 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.24038, 1.24038 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("window:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.392293, 0.0525566 ),
"update": 0,
"values": [ Vector2( 14, 18 ), Vector2( 408, 511 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("window:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.392293, 0.0525566 ),
"update": 0,
"values": [ Vector2( 197, 246.5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../background:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.329877 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.509804 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("buttons:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.192, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("image:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.194, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("tittle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.194, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("..:X")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../flecha_der:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.166, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../flecha_izq:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.173, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("indicador_bttn:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.173, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=127]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "5",
"speed": 5.0
} ]

[node name="pop_up_options_counter_change" type="CanvasLayer"]
layer = 6
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_lock_": true
}

[node name="flecha_izq" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -56.5
margin_right = 76.0
margin_bottom = 56.5
texture = ExtResource( 8 )
expand = true

[node name="anim" type="AnimationPlayer" parent="flecha_izq"]
anims/prss = SubResource( 124 )

[node name="flecha_der" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -56.5
margin_bottom = 56.5
texture = ExtResource( 8 )
expand = true
flip_h = true

[node name="anim" type="AnimationPlayer" parent="flecha_der"]
anims/prss = SubResource( 126 )

[node name="option" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -255.5
margin_right = 204.0
margin_bottom = 255.5
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="TextureRect" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -255.5
margin_right = 204.0
margin_bottom = 255.5
texture = ExtResource( 1 )
expand = true

[node name="tittle" type="Label" parent="option"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 16.0
margin_right = 101.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 122 )
text = "Indicador de daño"
align = 1
valign = 1

[node name="image" type="TextureRect" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.5
margin_top = -207.0
margin_right = 163.5
margin_bottom = -65.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="buttons" type="ScrollContainer" parent="option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -43.5
margin_right = 123.5
margin_bottom = 203.5
theme = SubResource( 24 )
follow_focus = true
__meta__ = {
"_edit_lock_": true
}

[node name="contenedor" type="HBoxContainer" parent="option/buttons"]
margin_right = 1251.0
margin_bottom = 247.0

[node name="style1" type="TextureButton" parent="option/buttons/contenedor"]
margin_right = 247.0
margin_bottom = 247.0
focus_neighbour_left = NodePath("../style5")
texture_normal = ExtResource( 4 )

[node name="tittle" type="Label" parent="option/buttons/contenedor/style1"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 113 )
text = "Por defecto"
align = 1
valign = 1
autowrap = true

[node name="info" type="Label" parent="option/buttons/contenedor/style1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -100.5
margin_right = 95.5
margin_bottom = -33.5
custom_fonts/font = SubResource( 116 )
text = "Animacion por defecto [presiona para seleccionar]"
align = 1
autowrap = true

[node name="button" type="AnimatedSprite" parent="option/buttons/contenedor/style1"]
position = Vector2( 128, 152 )
frames = SubResource( 128 )
animation = "si"

[node name="anim" type="AnimationPlayer" parent="option/buttons/contenedor/style1/button"]
anims/prss = SubResource( 115 )

[node name="style2" type="TextureButton" parent="option/buttons/contenedor"]
margin_left = 251.0
margin_right = 498.0
margin_bottom = 247.0
texture_normal = ExtResource( 4 )

[node name="tittle" type="Label" parent="option/buttons/contenedor/style2"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 113 )
text = "Girando"
align = 1
valign = 1
autowrap = true

[node name="info" type="Label" parent="option/buttons/contenedor/style2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -100.5
margin_right = 95.5
margin_bottom = -33.5
custom_fonts/font = SubResource( 116 )
text = "Estilo 2
[presiona para seleccionar]"
align = 1
autowrap = true

[node name="button" type="AnimatedSprite" parent="option/buttons/contenedor/style2"]
position = Vector2( 128, 152 )
frames = SubResource( 128 )
animation = "si"

[node name="anim" type="AnimationPlayer" parent="option/buttons/contenedor/style2/button"]
anims/prss = SubResource( 131 )

[node name="style3" type="TextureButton" parent="option/buttons/contenedor"]
margin_left = 502.0
margin_right = 749.0
margin_bottom = 247.0
texture_normal = ExtResource( 4 )

[node name="tittle" type="Label" parent="option/buttons/contenedor/style3"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 113 )
text = "Hacia arriba"
align = 1
valign = 1
autowrap = true

[node name="info" type="Label" parent="option/buttons/contenedor/style3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -100.5
margin_right = 95.5
margin_bottom = -33.5
custom_fonts/font = SubResource( 116 )
text = "Estilo 3
[presiona para seleccionar]"
align = 1
autowrap = true

[node name="button" type="AnimatedSprite" parent="option/buttons/contenedor/style3"]
position = Vector2( 128, 152 )
frames = SubResource( 128 )
animation = "si"

[node name="anim" type="AnimationPlayer" parent="option/buttons/contenedor/style3/button"]
anims/prss = SubResource( 133 )

[node name="style4" type="TextureButton" parent="option/buttons/contenedor"]
margin_left = 753.0
margin_right = 1000.0
margin_bottom = 247.0
texture_normal = ExtResource( 4 )

[node name="tittle" type="Label" parent="option/buttons/contenedor/style4"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 113 )
text = "Sin efecto"
align = 1
valign = 1
autowrap = true

[node name="info" type="Label" parent="option/buttons/contenedor/style4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -100.5
margin_right = 95.5
margin_bottom = -33.5
custom_fonts/font = SubResource( 116 )
text = "Estilo 4
[presiona para seleccionar]"
align = 1
autowrap = true

[node name="button" type="AnimatedSprite" parent="option/buttons/contenedor/style4"]
position = Vector2( 128, 152 )
frames = SubResource( 128 )
animation = "si"

[node name="anim" type="AnimationPlayer" parent="option/buttons/contenedor/style4/button"]
anims/prss = SubResource( 135 )

[node name="style5" type="TextureButton" parent="option/buttons/contenedor"]
margin_left = 1004.0
margin_right = 1251.0
margin_bottom = 247.0
focus_neighbour_right = NodePath("../style1")
texture_normal = ExtResource( 4 )

[node name="tittle" type="Label" parent="option/buttons/contenedor/style5"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 113 )
text = "Disparado"
align = 1
valign = 1
autowrap = true

[node name="info" type="Label" parent="option/buttons/contenedor/style5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -100.5
margin_right = 95.5
margin_bottom = -33.5
custom_fonts/font = SubResource( 116 )
text = "Estilo 5
[presiona para seleccionar]"
align = 1
autowrap = true

[node name="button" type="AnimatedSprite" parent="option/buttons/contenedor/style5"]
position = Vector2( 128, 152 )
frames = SubResource( 128 )
animation = "si"

[node name="anim" type="AnimationPlayer" parent="option/buttons/contenedor/style5/button"]
anims/prss = SubResource( 137 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="option"]
autoplay = "appear"
anims/appear = SubResource( 2 )

[node name="timer_text_test" type="Timer" parent="option"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="indicador_bttn" type="AnimatedSprite" parent="option"]
position = Vector2( 208, 496 )
frames = SubResource( 127 )
animation = "5"

[connection signal="focus_entered" from="option/buttons/contenedor/style1" to="." method="_on_style1_focus_entered"]
[connection signal="pressed" from="option/buttons/contenedor/style1" to="." method="_on_style1_pressed"]
[connection signal="focus_entered" from="option/buttons/contenedor/style2" to="." method="_on_style2_focus_entered"]
[connection signal="pressed" from="option/buttons/contenedor/style2" to="." method="_on_style2_pressed"]
[connection signal="focus_entered" from="option/buttons/contenedor/style3" to="." method="_on_style3_focus_entered"]
[connection signal="pressed" from="option/buttons/contenedor/style3" to="." method="_on_style3_pressed"]
[connection signal="focus_entered" from="option/buttons/contenedor/style4" to="." method="_on_style4_focus_entered"]
[connection signal="pressed" from="option/buttons/contenedor/style4" to="." method="_on_style4_pressed"]
[connection signal="focus_entered" from="option/buttons/contenedor/style5" to="." method="_on_style5_focus_entered"]
[connection signal="pressed" from="option/buttons/contenedor/style5" to="." method="_on_style5_pressed"]
[connection signal="timeout" from="option/timer_text_test" to="." method="_on_timer_text_test_timeout"]
